eks/ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-bank-ingress-http
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: "api.dermawan-bank.my.id"
      http:
        paths:
          # Aturan 1: Traffic /v1 diarahkan ke gRPC Gateway (port 80)
          - pathType: Prefix
            path: "/v1"
            backend:
              service:
                name: simple-bank-api-service
                port:
                  number: 80
          # Aturan 2: Semua traffic lainnya diarahkan ke Gin API (port 8081)
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: simple-bank-api-service
                port:
                  number: 8081
  tls:
    - hosts:
        - api.dermawan-bank.my.id
      secretName: simple-bank-api-cert
